# lo-shu

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  NOTES.md  README.md  SquaresFour.txt  rust-toolchain.toml
benches/: check.rs  checkers.rs  compress.rs  core_check.rs  core_check_compressed.rs  core_compress.rs  core_pack.rs  crossbeam.rs  iai_bench.rs  iters.rs  kth.rs  lib_bench.rs  mpsc.rs  mpsc_bench.rs  my_benchmark.rs  order_three_solve_iters.rs  pack.rs  perf_function.rs  test_order_three.rs  test_order_three_mpsc.rs  threads.rs
examples/: crossbeam_mpsc.rs  cycle_analysis.rs  demo.rs  group_action_analysis.rs  group_action_analysis_order_five.rs  improved_factors.rs  order_four_group_actions.rs  random_order_five.rs  random_sample_squares.rs  solve_order_five_mpsc.rs  solve_order_four_mpsc.rs  solve_order_three.rs  solve_order_three_mpsc.rs  solve_thread.rs  unique_census_as_cycles.rs  vectorized_kth.rs  wide_simd_streams.rs
examples/collected/: OrderFourActions.txt  OrderFourRightUnfiltered.txt
examples/demo/: ExampleInput.txt  ExampleOutput.txt
examples/gap/: order_of_group_from_gens.g
old_reference_code/order_three_mod/: mod.rs  mod_three.rs
paper/: GroupTheory.tex  MagicSquares.tex  references.bib  rhumj_new.cls
src/: lib.rs
src/checkers/: check.rs  check_compressed.rs  mod.rs
src/constructive/: construction.rs  mod.rs  random.rs
src/core/: channels.rs  check.rs  compress.rs  enumerable.rs  error.rs  file.rs  group.rs  mod.rs  pack.rs  perms.rs  square.rs  transform.rs
src/group/: cycles.rs  dihedral.rs  mod.rs  operation.rs
src/order/: five.rs  four.rs  mod.rs  params.rs  three.rs
src/order_three/: mod.rs  simd_double_perms_u8.rs  simd_perms_u8.rs  simd_threaded_kth_u8.rs
src/params/: mod.rs  order_four.rs  order_three.rs  param.rs
tests/: mod_tests.rs
(+33 files in other folders)
