[package]
name = "lo-shu"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
rand = "0.8.5"
rayon = "1.7.0"

[dev-dependencies]
criterion = "0.5.1"
iai = "0.1.1"

[[bench]]
name = "lib_bench"
harness = false

[[bench]]
name = "order_three_solve_iters"
harness = false

[[bench]]
name = "mpsc_bench"
harness = false

[[bench]]
name = "test_order_three"
harness = false

[[bench]]
name = "test_order_three_mpsc"
harness = false

[[bench]]
name = "pack"
harness = false

[[bench]]
name = "compress"
harness = false

[[bench]]
name = "check"
harness = false
