[package]
name = "lo-shu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
crossbeam-channel = "0.5.8"
itertools = "0.11.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
serde = "1.0.185"
serde_json = "1.0.105"

[dev-dependencies]
criterion = "0.5.1"
iai = "0.1.1"

[[bench]]
name = "kth"
harness = false

[[bench]]
name = "iters"
harness = false

[[bench]]
name = "threads"
harness = false

[[bench]]
name = "mpsc"
harness = false

[[bench]]
name = "crossbeam"
harness = false

[[bench]]
name = "check"
harness = false
